feat(user-score): get user score - add get all user score endpoint - get all score of a user from different assessment - get a user score of a particular assessment - get a user score of an assessment with the history of the assessment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ git default: &defaults
         POSTGRES_DB: circlecidb
         POSTGRES_PASSWORD: '' 
 
-  working_directory: ~/Assessment
+  working_directory: ~/repo
 
 version: 2
 jobs:
@@ -52,6 +52,6 @@ jobs:
           command: |
             . venv/bin/activate
             python manage.py test --cover-xml
-            ./cc-test-reporter format-coverage --debug coverage.xml -t "coverage.py" -o "cc.testreport.json"
-            ./cc-test-reporter upload-coverage --debug -i cc.testreport.json
+            ./cc-test-reporter format-coverage --debug -t coverage.py -o tmp/testreport.json coverage.xml
+            ./cc-test-reporter upload-coverage --debug -i tmp/testreport.json
             coveralls
