--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coverage==4.5.2
 coveralls==1.5.1
 dj-database-url==0.5.0
 Django==2.1.4
+django-cors-headers==2.4.0
 django-heroku==0.3.1
 django-nose==1.4.6
 djangorestframework==3.9.0
